--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
     <section
       class="site-hero"
-      style="background-image: url(image_1.jpg)"
+      style="background-image: url(profile.png)"
       id="section-home"
       data-stellar-background-ratio="0.5"
     >
@@ -381,20 +381,27 @@
       <div class="container">
         <div class="row mb-5 align-items-center">
           <div class="col-lg-7 pr-lg-5 mb-5 mb-lg-0">
-            <img src="image_1.jpg" alt="Image placeholder" class="img-fluid" />
+            <img
+              src="profile3.jpg"
+              width="450px"
+              alt="Image placeholder"
+              class="img-fluid"
+            />
           </div>
           <div class="col-lg-5 pl-lg-5">
             <div class="section-heading">
               <h2>About <strong>Me</strong></h2>
             </div>
             <p class="lead">
-              Separated they live in Bookmarksgrove right at the coast of the
-              Semantics, a large language ocean.
+              I’m a frontend developer with 4+ years of experience building
+              modern, user-focused websites. I specialize in JavaScript and
+              tools like React and Next.js, delivering clean, responsive, and
+              high-performance interfaces.
             </p>
             <p class="mb-5">
-              A small river named Duden flows by their place and supplies it
-              with the necessary regelialia. It is a paradisematic country, in
-              which roasted parts of sentences fly into your mouth.
+              With a strong eye for detail and a passion for web technologies, I
+              aim to create smooth and engaging user experiences. I’m always
+              looking to grow and collaborate on meaningful digital projects.
             </p>
 
             <p>
