Update head title

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
       gtag("config", "G-SEKJ4E9T4H");
     </script>
 
-    <title>Rezume Free Template by Colorlib</title>
+<title>Mohammadreza Hajian | Frontend Developer</title>
+<meta name="description" content="Personal resume of Mohammadreza Hajian – Frontend developer passionate about JavaScript, React, and web development.">
+
 
     <meta
       name="viewport"
