--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
             <img
               src="profile3.jpg"
               width="450px"
-              alt="Image placeholder"
+              alt="Mohammadreza hajian"
               class="img-fluid"
             />
           </div>
